# Vention-AI-Challenge-2.0

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.githooks/: pre-commit
task-1/: index.html  package-lock.json  package.json  report.md  vite.config.js
task-1/assets/: index-7OmuJKGh.css  index-BwwnFjk5.js  index-CIp5GMzF.js  index-DIFYSq--.css
task-1/src/: App.css  App.jsx
task-1/src/components/: Filters.css  Filters.jsx  LeaderboardList.css  LeaderboardList.jsx  LeaderboardRow.css  LeaderboardRow.jsx  Podium.css  Podium.jsx
task-1/src/data/: mockData.js
task-1/src/utils/: leaderboard.js
task-2/: README.md  example-rsvp-export.csv  final-test-report.md  lovable-prompts.md  report.md  task.md  testing-approach.md
task-3/: BrAIny Buddy - Main Bot v2.json  README.md  atlas-telegram-web-test-prompt.md  implementation-notes.md  n8n-llm-prompts.md  report.md  task.md
task-4/: .gitignore  README.md  pyproject.toml  report.md  task.md  test-coverage-review.md
task-4/src/atc_mcp/: __init__.py  bottleneck.py  config.py  database.py  models.py  repository.py  scheduler.py  serialization.py  server.py  service.py  status.py
task-4/tests/: __init__.py  assertions.py  conftest.py
task-4/tests/scenarios/: test_mcp_smoke.py  test_scheduler_scenarios.py
task-4/tests/unit/: test_config.py  test_repository.py  test_submission_artifacts.py
