[project]
name = "atc-mcp"
version = "0.1.0"
description = "Stateful MCP server for lightweight commercial airport scheduling"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp[cli]>=1.18.0",
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atc_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
